# ffxiv-profit-scanner

./: .gitignore  README.md  REWORK_PLAN.md  app.py  ffxiv_scanner.py  pyproject.toml  requirements.txt
.github/workflows/: release.yml  tests.yml
Documentation/: ffxiv-market-scanner-spec.md
scanner/: cache.py  output.py  pricing.py
scanner/api/: garland.py  universalis.py
scanner/data/: seeds.py
scanner/modes/: craft_scan.py  crafting_scan.py  cross_world.py  discover.py  gather_scan.py  hunter_scan.py  scrape_seeds.py  seal_scan.py  vendor_arbitrage.py
